supplemental descriptive stats

--- a/Programs/1_Preprocessing.ipynb
+++ b/Programs/1_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,23 +23,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emory\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\yche465\\\\Desktop\\\\AIM 1\\\\Codes\\\\PrEP-Traj-Clustering\\\\Data'"
+       "'C:\\\\Users\\\\yche465\\\\Desktop\\\\AIM1\\\\Codes\\\\PrEP-Traj-Clustering\\\\Data\\\\fake'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "User=['Emory','WG'][0]\n",
+    "print(User)\n",
+    "\n",
     "#Change directory\n",
-    "os.chdir(pr.here(\"./Data\"))\n",
+    "if User=='Emory':\n",
+    "    os.chdir(pr.here(\"./Data/fake\"))\n",
+    "elif User == 'WG':\n",
+    "    os.chdir(pr.here(\"./Data/real\"))\n",
     "os.getcwd()"
    ]
   },
@@ -52,17 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import raw dataset\n",
-    "data=pd.read_csv(\"syndata_13k.csv\").astype({'ID':'int'})\n"
+    "data=pd.read_csv(\"syndata_13k.csv\").astype({'ID':'int64'})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -130,7 +143,7 @@
        "4  102  12/22/2023  05/06/2024"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,15 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "<class 'str'>\n"
+      "<class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
+      "<class 'pandas._libs.tslibs.timestamps.Timestamp'>\n"
      ]
     }
    ],
@@ -192,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -240,37 +253,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>20</td>\n",
-       "      <td>02/26/2023</td>\n",
-       "      <td>05/16/2023</td>\n",
-       "      <td>02/26/2023</td>\n",
+       "      <td>2023-02-26</td>\n",
+       "      <td>2023-05-16</td>\n",
+       "      <td>2023-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>20</td>\n",
-       "      <td>10/25/2023</td>\n",
-       "      <td>01/11/2024</td>\n",
-       "      <td>02/26/2023</td>\n",
+       "      <td>2023-10-25</td>\n",
+       "      <td>2024-01-11</td>\n",
+       "      <td>2023-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>20</td>\n",
-       "      <td>05/17/2024</td>\n",
-       "      <td>06/26/2024</td>\n",
-       "      <td>02/26/2023</td>\n",
+       "      <td>2024-05-17</td>\n",
+       "      <td>2024-06-26</td>\n",
+       "      <td>2023-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>93</td>\n",
-       "      <td>03/25/2023</td>\n",
-       "      <td>10/26/2023</td>\n",
-       "      <td>03/25/2023</td>\n",
+       "      <td>2023-03-25</td>\n",
+       "      <td>2023-10-26</td>\n",
+       "      <td>2023-03-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>102</td>\n",
-       "      <td>12/22/2023</td>\n",
-       "      <td>05/06/2024</td>\n",
-       "      <td>03/06/2025</td>\n",
+       "      <td>2023-12-22</td>\n",
+       "      <td>2024-05-06</td>\n",
+       "      <td>2023-12-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -282,37 +295,37 @@
        "    <tr>\n",
        "      <th>19792</th>\n",
        "      <td>191919</td>\n",
-       "      <td>11/14/2023</td>\n",
-       "      <td>04/07/2024</td>\n",
-       "      <td>11/14/2023</td>\n",
+       "      <td>2023-11-14</td>\n",
+       "      <td>2024-04-07</td>\n",
+       "      <td>2023-11-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19793</th>\n",
        "      <td>191934</td>\n",
-       "      <td>08/21/2023</td>\n",
-       "      <td>01/14/2024</td>\n",
-       "      <td>08/21/2023</td>\n",
+       "      <td>2023-08-21</td>\n",
+       "      <td>2024-01-14</td>\n",
+       "      <td>2023-08-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19794</th>\n",
        "      <td>191941</td>\n",
-       "      <td>02/05/2023</td>\n",
-       "      <td>06/28/2023</td>\n",
-       "      <td>02/05/2023</td>\n",
+       "      <td>2023-02-05</td>\n",
+       "      <td>2023-06-28</td>\n",
+       "      <td>2023-02-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19795</th>\n",
        "      <td>191955</td>\n",
-       "      <td>08/11/2023</td>\n",
-       "      <td>10/20/2023</td>\n",
-       "      <td>08/11/2023</td>\n",
+       "      <td>2023-08-11</td>\n",
+       "      <td>2023-10-20</td>\n",
+       "      <td>2023-08-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19796</th>\n",
        "      <td>191995</td>\n",
-       "      <td>08/22/2023</td>\n",
-       "      <td>10/28/2023</td>\n",
-       "      <td>08/22/2023</td>\n",
+       "      <td>2023-08-22</td>\n",
+       "      <td>2023-10-28</td>\n",
+       "      <td>2023-08-22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -320,23 +333,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          PID  PrEP_Start    PrEP_End  Initiation\n",
-       "0          20  02/26/2023  05/16/2023  02/26/2023\n",
-       "1          20  10/25/2023  01/11/2024  02/26/2023\n",
-       "2          20  05/17/2024  06/26/2024  02/26/2023\n",
-       "3          93  03/25/2023  10/26/2023  03/25/2023\n",
-       "4         102  12/22/2023  05/06/2024  03/06/2025\n",
-       "...       ...         ...         ...         ...\n",
-       "19792  191919  11/14/2023  04/07/2024  11/14/2023\n",
-       "19793  191934  08/21/2023  01/14/2024  08/21/2023\n",
-       "19794  191941  02/05/2023  06/28/2023  02/05/2023\n",
-       "19795  191955  08/11/2023  10/20/2023  08/11/2023\n",
-       "19796  191995  08/22/2023  10/28/2023  08/22/2023\n",
+       "          PID PrEP_Start   PrEP_End Initiation\n",
+       "0          20 2023-02-26 2023-05-16 2023-02-26\n",
+       "1          20 2023-10-25 2024-01-11 2023-02-26\n",
+       "2          20 2024-05-17 2024-06-26 2023-02-26\n",
+       "3          93 2023-03-25 2023-10-26 2023-03-25\n",
+       "4         102 2023-12-22 2024-05-06 2023-12-22\n",
+       "...       ...        ...        ...        ...\n",
+       "19792  191919 2023-11-14 2024-04-07 2023-11-14\n",
+       "19793  191934 2023-08-21 2024-01-14 2023-08-21\n",
+       "19794  191941 2023-02-05 2023-06-28 2023-02-05\n",
+       "19795  191955 2023-08-11 2023-10-20 2023-08-11\n",
+       "19796  191995 2023-08-22 2023-10-28 2023-08-22\n",
        "\n",
        "[19797 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
